# HashCortX

./: .gitignore  App Guide 101  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  package-lock.json  package.json  tauri.conf.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: ARCHITECTURE.md  BRAND.md  SECURITY.md
docs/future/: build.yml
scripts/: gen-icon.py
src/: app-shell.html  index.html  main.js  main.rs  styles.css
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: audit.rs  mod.rs  notch.rs  usage_log.rs
src-tauri/src/security/: mod.rs
src/commands/: fs.rs  keychain.rs  mod.rs  shell.rs
src/css/: agent-maker.css  base.css  coder-mode.css  composer.css  finance-mode.css  forge-mode.css  main.css  modals.css  modes.css  sandbox.css  sidebar.css  system-maker.css  tabs.css  vars.css  virtual-os.css
src/js/: app.js  code-mode.js  finance-mode.js  forge-mode.js  sandbox.js  swarm-maker.js  system-maker.js  virtual-os.js
src/platform/: index.js
src/platform/tauri/: guard.js  hashcoder.js  keychain.js
src/security/: denylist.rs
